--- a/ComponentBundler/ComponentBundler.csproj
+++ b/ComponentBundler/ComponentBundler.csproj
@@ -32,12 +32,38 @@
     <ItemGroup>
       <ProjectReference Include="..\ComponentBundler.Preloader\ComponentBundler.Preloader.csproj" />
     </ItemGroup>
-
+    
     <PropertyGroup>
-        <LETHAL_COMPANY_PATH>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company</LETHAL_COMPANY_PATH>
+        <LETHAL_COMPANY_PATH>D:\Program\Steam\steamapps\common\Lethal Company</LETHAL_COMPANY_PATH>
     </PropertyGroup>
+
+    <!--Launch a Process in Parallel-->
+    <UsingTask TaskName="ExecAsync" TaskFactory="RoslynCodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.Core.dll">
+        <ParameterGroup>
+            <!--The file path is the full path to the executable file to run-->
+            <FilePath ParameterType="System.String" Required="true" />
+            <!--The arguments should contain all the command line arguments that need to be sent to the application-->
+            <Arguments ParameterType="System.String" Required="true" />
+        </ParameterGroup>
+        <Task>
+            <Code Type="Fragment" Language="cs">
+                <![CDATA[
+  string name = System.IO.Path.GetFileNameWithoutExtension(FilePath);
+  Log.LogMessage("Starting {0}...", name);        
+  System.Diagnostics.ProcessStartInfo processStartInfo = new System.Diagnostics.ProcessStartInfo(FilePath, Arguments);
+  processStartInfo.UseShellExecute = true;
+  System.Diagnostics.Process.Start(processStartInfo);
+  Log.LogMessage("Finished running process {0}.", name);
+  ]]>
+            </Code>
+        </Task>
+    </UsingTask>
 
     <Target Name="CopyDLL" AfterTargets="Build">
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(LETHAL_COMPANY_PATH)\BepInEx\plugins" />
+    </Target>
+
+    <Target Name="RunGame" AfterTargets="CopyDLL">
+        <ExecAsync FilePath="&quot;$(LETHAL_COMPANY_PATH)\Lethal Company.exe&quot;" Arguments=" " />
     </Target>
 </Project>
